--- a/JavaFXApplication4/src/javafxapplication4/FXMLDocument.fxml
+++ b/JavaFXApplication4/src/javafxapplication4/FXMLDocument.fxml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="696.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="javafxapplication4.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="471.0" prefWidth="705.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="javafxapplication4.FXMLDocumentController">
     <children>
-        <Button fx:id="button" layoutX="125" layoutY="90" onAction="#handleButtonAction" text="Click Me!" />
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
+        <Button fx:id="button" layoutX="601.0" layoutY="432.0" onAction="#handleButtonAction" text="Click Me!" />
+        <Label fx:id="label" layoutX="89.0" layoutY="132.0" minHeight="16" minWidth="69" />
+      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="705.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Imprimir">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Close" />
+               </items>
+            </Menu>
+        </menus>
+      </MenuBar>
+      <TextField layoutX="131.0" layoutY="182.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="131.0" layoutY="235.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="131.0" layoutY="283.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="131.0" layoutY="335.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="398.0" layoutY="182.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="398.0" layoutY="235.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="398.0" layoutY="283.0" prefHeight="25.0" prefWidth="181.0" />
+      <TextField layoutX="398.0" layoutY="335.0" prefHeight="25.0" prefWidth="181.0" />
+      <Accordion layoutX="57.0" layoutY="57.0" />
+      <Separator layoutX="-6.0" layoutY="417.0" prefHeight="3.0" prefWidth="705.0" />
+      <Label layoutX="199.0" layoutY="165.0" text="Nome:" />
+      <Label layoutX="185.0" layoutY="266.0" text="Fornecedor:" />
+      <Label layoutX="194.0" layoutY="213.0" text="Produto:" />
+      <Label layoutX="442.0" layoutY="318.0" text="Código de barras:" />
+      <Separator layoutY="139.0" prefHeight="3.0" prefWidth="705.0" />
+      <Label layoutX="446.0" layoutY="266.0" text="Data de entrada" />
+      <Label layoutX="201.0" layoutY="318.0" text="Marca" />
+      <Label layoutX="439.0" layoutY="213.0" text="Data de validade" />
+      <Label layoutX="437.0" layoutY="165.0" text="Data de Fabricação:" />
+      <Label layoutX="14.0" layoutY="83.0" text="Cadastro de produtos">
+         <font>
+            <Font size="33.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="111.0" fitWidth="111.0" layoutX="575.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="https://cdn1.iconfinder.com/data/icons/flat-artistic-shopping/32/shopping-add-128.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
